--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<li><strong>Création de musique et beats</strong></li>
 		<p>Je crée aussi des musiques pour mes jeux et autres</p1>
 		<br><strong>Aperçu</strong><br>
-		<img src="c.PNG" alt="voici une image" width="500"/><br>
+		<img src="c.png" alt="voici une image" width="500"/><br>
 
 		<li><strong>Design Interieur</strong></li>
 		<p>Je crée aussi des models 3d de batiments et objets d'interieur pour mes jeux et autres</p>
